--- a/CV.html
+++ b/CV.html
@@ -7,7 +7,7 @@
 <body>
 
 <pre>
-<strong>First Last</strong>
+<b>First Last</b>
                                                                                                                                     335 Name Street,Unit#,Town,Province,N2H 3Y6          
    </pre>
 
@@ -29,7 +29,7 @@
 <h1>WORK EXPERIENCE</h1>
 <hr>
 
-<pre> Start End Year                       <strong> JOB Tittle One</strong>
+<pre> Start End Year                       <b></b> JOB Tittle One</b>
 
                                      Company Name,Address,City Province
                                    <!-- <ul>
@@ -44,7 +44,7 @@
                                     .bullet two bullet Two
                                     .bullet three bullet three
                                     .bullet four bullet four<br>
-Start End Year                        <strong>JOB Tittle Two</strong>
+Start End Year                        <b>JOB Tittle Two</b>
 
                                     Company Name,Address,City province
                                      </pre>
